src/objects/Actor__c.object
<CustomObject>
    <fields>
        <fullName>Adult__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Adult</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Popularity__c</fullName>
        <label>Popularity</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProfilePath__c</fullName>
        <label>Profile Path</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Actor</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Actors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>